Change BG color

--- a/Test.html
+++ b/Test.html
@@ -2,7 +2,7 @@
 <HEAD>
 <TITLE>Introduction to Git/Github</TITLE>
 </HEAD>
-<BODY BGCOLOR="808080">
+<BODY BGCOLOR="FFFFFF">
 <a href="https://wolfware.ncsu.edu/"><font size="6">Wolfware</font></a>
 <H1><font size="20" color="FFFFFF">Use Git and enjoy!</font></H1><font size="5">
 Want to become a member of NCSU ACM-AITP,<br>
