Add link to NCSU-ACM page

--- a/Test.html
+++ b/Test.html
@@ -14,6 +14,7 @@ educational computing society. Since 1947 it has served members now numbering ov
 worldwide. The AITP (Association of Information Technology Professionals) is a professional association<br>
 comprised of career minded individuals who seek to expand their potential. At North Carolina State<br>
 University, the student chapters of these two organizations are combined (with two sets of officers)<br>
-and serve students as a joint body, the NCSU Student ACM/AITP.<br>
+and serve students as a joint body, the NCSU Student ACM/AITP.<br><br>
+<P> Link to our home page: <a href="http://students.engr.ncsu.edu/acm-aitp/"><font size="4">NCSU-ACM/AITP</font></a>
 </BODY>
 </HTML> 
