Give color to texts

--- a/Test.html
+++ b/Test.html
@@ -2,19 +2,27 @@
 <HEAD>
 <TITLE>Introduction to Git/Github</TITLE>
 </HEAD>
-<BODY BGCOLOR="FFFFFF">
+<BODY>
 <a href="https://wolfware.ncsu.edu/"><font size="6">Wolfware</font></a>
-<H1><font size="20" color="FFFFFF">Use Git and enjoy!</font></H1><font size="5">
+
+<H1>Purpose: <font color="FFFFFF">Use Git and enjoy!</font></H1>
+
+<font size="5" color="green">
 Want to become a member of NCSU ACM-AITP,<br>
 Send us a mail at <a href="mailto:acm-aitp-members@lists.ncsu.edu">
-acm-aitp-members@lists.ncsu.edu</a></font> 
-<P> <font size="14">What is ACM/AITP? </font><br><br>
-The ACM (Association for Computing Machinery) is the world's oldest and largest scientific and <br>
+acm-aitp-members@lists.ncsu.edu</a>
+</font> 
+
+<H2>What is ACM/AITP? </H2>
+
+<p> <font color="blue">The ACM (Association for Computing Machinery) is the world's oldest and largest scientific and <br>
 educational computing society. Since 1947 it has served members now numbering over 80,000<br>
 worldwide. The AITP (Association of Information Technology Professionals) is a professional association<br>
 comprised of career minded individuals who seek to expand their potential. At North Carolina State<br>
 University, the student chapters of these two organizations are combined (with two sets of officers)<br>
-and serve students as a joint body, the NCSU Student ACM/AITP.<br><br>
-<P> Link to our home page: <a href="http://students.engr.ncsu.edu/acm-aitp/"><font size="4">NCSU-ACM/AITP</font></a>
+and serve students as a joint body, the NCSU Student ACM/AITP. </font></p>
+
+<P> <font size="4"><b>Link to our home page:</b> <a href="http://students.engr.ncsu.edu/acm-aitp/">NCSU-ACM/AITP</font></a>
+
 </BODY>
 </HTML> 
